# artichoke-lang

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.arti/ws/: config.lua  launch.lua  tasks.lua
configured_files/: config.hpp.in
include/common/: error.hpp
include/common/utils/: coroutines.hpp  overload_set.hpp  strings.hpp
include/lang/: types.hpp
include/lang/evaluator/: concept.hpp  function.hpp  native_fns.hpp  object.hpp  scope.hpp  state.hpp
include/lang/evaluator/impls/: tree_walker.hpp
include/lang/lexer/: lexer.hpp
include/lang/lexer/token/: token.hpp  type.hpp
include/lang/parser/: ast.hpp  parser.hpp
src/lang/evaluator/: function.cpp  object.cpp  scope.cpp
src/lang/evaluator/impls/tree_walker/: array.cpp  assign.cpp  binary.cpp  block.cpp  call.cpp  declaration.cpp  eval.cpp  fn.cpp  for.cpp  hash.cpp  if.cpp  index.cpp  resolve.cpp  return.cpp  unary.cpp  while.cpp
src/lang/evaluator/native_fns/: copy.cpp  eval.cpp  fmt.cpp  import.cpp  len.cpp  move.cpp  printf.cpp  push.cpp  read_line.cpp  reserve.cpp  resize.cpp  to_string.cpp  typeof.cpp
src/lang/lexer/: lexer.cpp
src/lang/parser/: ast.cpp  parser.cpp
src/lang/parser/impls/: array.cpp  assign.cpp  binary.cpp  bool.cpp  call.cpp  character.cpp  decimal.cpp  declaration.cpp  fn.cpp  for.cpp  grouped.cpp  hash.cpp  identifier.cpp  if.cpp  index.cpp  integer.cpp  null.cpp  return.cpp  string.cpp  unary.cpp  while.cpp
tests/: fibo.arti
